fix work with ui and tlg with user